--- a/src/main/resources/templates/statusDistribute.html
+++ b/src/main/resources/templates/statusDistribute.html
@@ -80,8 +80,9 @@
                                 legend: {
                                     orient : 'vertical',
                                     x : 'left',
-                                    data:['运行','空闲','停机','离线']
+                                    data:['运行','空闲','停机','离线','设定']
                                 },
+                                color:['#91cc75', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                 toolbox: {
                                     show : true,
                                     feature : {
@@ -113,8 +114,9 @@
                                         data:[
                                             {value:335, name:'运行'},
                                             {value:310, name:'空闲'},
-                                            {value:234, name:'停机'},
-                                            {value:135, name:'离线'},
+                                            {value:134, name:'停机'},
+                                            {value:295, name:'离线'},
+                                            {value:315, name:'设定'},
                                         ]
                                     }
                                 ]
@@ -161,8 +163,9 @@
                                     legend: {
                                         orient : 'vertical',
                                         x : 'left',
-                                        data:['运行','空闲','停机','离线']
+                                        data:['运行','空闲','停机','离线','设定']
                                     },
+                                    color:['#91cc75', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show : true,
                                         feature : {
@@ -196,6 +199,7 @@
                                                 {value:310, name:'空闲'},
                                                 {value:134, name:'停机'},
                                                 {value:335, name:'离线'},
+                                                {value:235, name:'设定'},
                                             ]
                                         }
                                     ]
@@ -241,8 +245,9 @@
                                     legend: {
                                         orient : 'vertical',
                                         x : 'left',
-                                        data:['运行','空闲','停机','离线']
+                                        data:['运行','空闲','停机','离线','设定']
                                     },
+                                    color:['#91cc75', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show : true,
                                         feature : {
@@ -276,6 +281,7 @@
                                                 {value:310, name:'空闲'},
                                                 {value:234, name:'停机'},
                                                 {value:335, name:'离线'},
+                                                {value:315, name:'设定'},
                                             ]
                                         }
                                     ]
@@ -323,8 +329,9 @@
                                     legend: {
                                         orient : 'vertical',
                                         x : 'left',
-                                        data:['运行','空闲','停机','离线']
+                                        data:['运行','空闲','停机','离线','设定']
                                     },
+                                    color:['#91cc75', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show : true,
                                         feature : {
@@ -358,6 +365,7 @@
                                                 {value:390, name:'空闲'},
                                                 {value:335, name:'停机'},
                                                 {value:135, name:'离线'},
+                                                {value:265, name:'设定'}
                                             ]
                                         }
                                     ]
@@ -403,8 +411,9 @@
                                     legend: {
                                         orient : 'vertical',
                                         x : 'left',
-                                        data:['运行','空闲','停机','离线']
+                                        data:['运行','空闲','停机','离线','设定']
                                     },
+                                    color:['#91cc75', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show : true,
                                         feature : {
@@ -438,6 +447,7 @@
                                                 {value:110, name:'空闲'},
                                                 {value:135, name:'停机'},
                                                 {value:234, name:'离线'},
+                                                {value:294, name:'设定'},
                                             ]
                                         }
                                     ]
