间距颜色微调

--- a/src/main/resources/templates/ChanPin.html
+++ b/src/main/resources/templates/ChanPin.html
@@ -35,7 +35,7 @@
                     <div class="col-12">
                     </div>
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">产品信息</h4>
                         </div>
                     </div>
