--- a/src/main/resources/templates/LiYongLv.html
+++ b/src/main/resources/templates/LiYongLv.html
@@ -34,7 +34,7 @@
                 <!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">设备利用率（运行时长/制度有效时长）</h4>
 <!--         无用的右侧标题                   -->
 <!--                            <div class="page-title-right">-->
