--- a/src/main/resources/templates/alarmRecord.html
+++ b/src/main/resources/templates/alarmRecord.html
@@ -35,7 +35,7 @@
                 <!--    OP40、OP50            -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">设备报警记录</h4>
                         </div>
                     </div>
