--- a/src/main/resources/templates/deviceParameter.html
+++ b/src/main/resources/templates/deviceParameter.html
@@ -37,7 +37,7 @@
                 <!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">设备过程参数</h4>
                             <!--           无用的右侧标题                 -->
                             <!--                            <div class="page-title-right">-->
