--- a/src/main/resources/templates/paiBan.html
+++ b/src/main/resources/templates/paiBan.html
@@ -42,7 +42,7 @@
                 <!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">当前设备OEE分析</h4>
                             <!--          无用的右侧标题                  -->
                             <!--                            <div class="page-title-right">-->
