--- a/src/main/resources/templates/timeAnalysis.html
+++ b/src/main/resources/templates/timeAnalysis.html
@@ -38,6 +38,20 @@
     <div class="main-content">
         <div class="page-content">
             <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
+                            <h4 class="mb-0">用时分析</h4>
+                            <!--          无用的右侧标题                  -->
+                            <!--                            <div class="page-title-right">-->
+                            <!--                                <ol class="breadcrumb m-0">-->
+                            <!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>-->
+                            <!--                                    <li class="breadcrumb-item active">Dashboard</li>-->
+                            <!--                                </ol>-->
+                            <!--                            </div>-->
+                        </div>
+                    </div>
+                </div><!-- end page title -->
                 <div class="row-fluid">
                     <div class="card">
                         <div class="card-body">
@@ -150,7 +164,7 @@
                                         padding: [0, 100, 0, 0],
                                         data: ['运行', '空闲', '停机', '离线', '设定']
                                     },
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -224,7 +238,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -298,7 +312,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -372,7 +386,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -446,7 +460,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -521,7 +535,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -595,7 +609,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
@@ -669,7 +683,7 @@
                                         formatter: "{a} <br/>{b} : {c} ({d}%)"
                                     },
 
-                                    color: ['#00FF7F', '#FFD700', '#FF4500', '#778899', '#00BFFF'],
+                                    color: ['#91cc95', '#fac858', '#ee6666', '#abadb4', '#5470c6'],
                                     toolbox: {
                                         show: true,
                                         feature: {
