--- a/src/main/resources/templates/ChanLiang.html
+++ b/src/main/resources/templates/ChanLiang.html
@@ -36,7 +36,7 @@
                 <!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">整线小时产量</h4>
 <!--           无用的右侧标题                 -->
 <!--                            <div class="page-title-right">-->
