--- a/src/main/resources/templates/knifes-huizong.html
+++ b/src/main/resources/templates/knifes-huizong.html
@@ -29,7 +29,8 @@
             <div class="container-fluid"><!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between"><h4 class="mb-0">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
+                            <h4 class="mb-0">
                             刀具信息</h4>
 <!--      无用的右侧标题                      -->
 <!--                            <div class="page-title-right">-->
