--- a/src/main/resources/templates/outputAnalysis.html
+++ b/src/main/resources/templates/outputAnalysis.html
@@ -38,7 +38,7 @@
                 <!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
                             <h4 class="mb-0">设备产量计数分析</h4>
                             <!--           无用的右侧标题                 -->
                             <!--                            <div class="page-title-right">-->
