刀具信息颜色提醒（警告-黄色，报警-红色）； 刀具异常信息汇总

--- a/src/main/resources/templates/alarmRecord.html
+++ b/src/main/resources/templates/alarmRecord.html
@@ -29,7 +29,7 @@
     <!-- Start right Content here --><!-- ============================================================== -->
     <div class="main-content">
         <div class="page-content">
-            <div class="container-fluid">
+            <div class="container-fluid" style="margin-left: 40px;width: 110%">
 
                 <!--设备警告展示块-->
                 <!--    OP40、OP50            -->
